# dotfiles-installer

./: README.md  com.ml4w.dotfilesinstaller.json  meson.build  package.json  setup.sh  typos.toml
.github/workflows/: docs.yml
data/: com.ml4w.dotfilesinstaller.desktop.in  com.ml4w.dotfilesinstaller.gschema.xml  com.ml4w.dotfilesinstaller.metainfo.xml.in  com.ml4w.dotfilesinstaller.service.in  meson.build
data/icons/: meson.build
docs/: changelog.md  index.md
docs/.vitepress/: config.mts  config.ts
docs/.vitepress/theme/: index.ts
docs/dev/: create-project.md  examples.md  overview.md  prepare-git-repository.md  publish-dotfiles.md  sync-files.md
docs/getting-started/: install.md  overview.md
docs/install/: backup.md  load-dotinst.md  protect.md
examples/: dotfiles.dotinst  hyprland-dotfiles.dotinst  hyprland-starter.dotinst
po/: POTFILES.in  meson.build
src/: _settings.py  dotfiles-installer.gresource.xml  dotfiles-installer.in  dotfilessettings.py  finish.py  information.py  installation.py  loadconfiguration.py  main.py  meson.build  protect.py  restore.py  restoreitem.py  settings.py  settingsitem.py  window.py
src/classes/: addproject.py  backup.py  finish.py  information.py  installation.py  loadconfiguration.py  preferences.py  protect.py  restore.py  settings.py
src/items/: backupitem.py  dotfilesitem.py  protectitem.py  restoreitem.py  settingsitem.py
src/templates/: tpl.dotinst  tpl_dev.dotinst
src/ui/: addproject.ui  backup.ui  dotfilessettings.ui  finish.ui  information.ui  installation.ui  loadconfiguration.ui  preferences.ui  protect.ui  restore.ui  settings.ui  window.ui
